# battery-stat

./: README.md  battery-stat.py  battery_stat.py  pyproject.toml
