[tool.poetry]
name = "battery-stat"
version = "0.1.0"
description = "battery statistics for linux"
authors = ["Bryan Lai <bryanlais@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
