[tool.poetry]
name = "battery-stat"
version = "0.1.0"
description = "battery statistics for linux"
authors = ["Bryan Lai <bryanlais@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.7.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
battery-stat = 'battery_stat:show'

[tool.ruff]
select = ["E", "F", "W"]
ignore = [
    # "F403",
    # "F405",
    "E402", # imports not at the very top
]
